--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "devDependencies": {
         "@types/chai": "^4.2.12",
         "@types/jest": "^27.4.0",
-        "@types/node": "^17.0.7",
+        "@types/node": "^17.0.29",
         "@typescript-eslint/eslint-plugin": "^5.9.0",
         "@typescript-eslint/parser": "^5.9.0",
         "chai": "^4.2.0",
@@ -61,12 +61,12 @@
         "lint-staged": "^12.1.5",
         "prettier": "^2.1.1",
         "pretty-quick": "^3.0.0",
-        "semantic-release": "^18.0.1",
+        "semantic-release": "^19.0.2",
         "ts-jest": "^27.0.3",
         "ts-node": "^10.0.0",
         "typescript": "^4.0.2"
     },
-    "dependencies": {
-        "expect": "^27.0.6"
+    "peerDependencies": {
+        "expect": ">= 27.0.6"
     }
 }
